# Autonomous-Navigation-and-Control

./: README.md
Documentation/: Python-OpenCV.txt  ROS-Gazebo.txt  SolidWorks.txt
Mechanical/BOT SW/: BOT.SLDASM  Back.SLDPRT  Base.SLDPRT  Bearing ring.SLDPRT  Bearing roller.SLDPRT  Bearing.SLDASM  Camera.SLDPRT  EP.SLDPRT  Flap.SLDPRT  Front.SLDPRT  LIDAR.SLDPRT  Motor Double.SLDPRT  Motor Long.SLDPRT  Motor.SLDPRT  Part Base.SLDPRT  USS.SLDPRT  Wheel.SLDPRT
Mechanical/bot1/: package.xml  urdf.rviz
NEW_DESIGN/bot1/: CMakeLists.txt  package.xml
OLD_DESIGN/bot1/: CMakeLists.txt  README  package.xml
bot1/launch/: controls.launch  differential.launch  flaps.launch  gates.launch  gazebo.launch
bot1/meshes/: RF.STL  RLW.STL  base_link.STL  off.py
bot1/scripts/: arrow.py  ball_detection.py  balls_dumping.py  dumping.py  flaps_open.py  image 2.py  image.py  image_final.py  image_old.py  image_updated.py  pushing_ball.py  ramp_dumping.py
bot1/urdf/: bot1.urdf  bot1_3.urdf  bot1_updated.urdf  bot5.urdf
src/final_description/: CMakeLists.txt  package.xml
src/final_description/config/: differential.yaml
src/final_description/launch/: controls.launch  differential.launch  display.launch  flaps.launch  gates.launch  gazebo.launch  rviz.launch
src/final_description/meshes/: FC.STL  RRW.STL  base_link.STL
src/final_description/scripts/: arrow.py  ball_detection.py  flaps_control.py  image.py  laser_distance.py  pushing_ball.py  sonar.py
src/final_description/urdf/: final.urdf  final_1.urdf  final_2.urdf
src/final_gazebo/: package.xml
(+41 files in other folders)
